# esp-rust-fc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  flake.nix
.cargo/: config.toml
.direnv/: flake-profile-4-link  flake-profile-5-link
.github/workflows/: rust.yml
firmware/: Cargo.toml
flight-control/: Cargo.toml
flight-control/src/: controller.rs  lib.rs  mixer.rs  pid.rs
flight-sim/: Cargo.toml
flight-sim/src/: drone.rs  input.rs  lib.rs  logger.rs  main.rs  renderer.rs  sim.rs  simulation.rs  world.rs
hardware/: Cargo.toml
run-data/: rec.json  test.idfk
telemetry-viewer/: Cargo.toml
telemetry-viewer/src/: main.rs
