[package]
name = "flight-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
flight-control = { path = "../flight-control", features = ["std"] }

rapier3d = { version = "0.31", features = ["simd-stable"] }

nalgebra = { version = "0.34", features = [
	"serde-serialize",
	"convert-glam030",
] }

serde_with = "3.21.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["serde_derive"] }
rmp-serde = "1.3.1"
blue_engine = "0.10.0"
anyhow = "1.0.102"
