[package]
name = "telemetry-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
flight-control = { path = "../flight-control", features = ["std"] }
flight-sim = { path = "../flight-sim" }

nalgebra = { version = "0.34", features = ["serde-serialize"] }

serde_with = "3.21.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["serde_derive"] }
rmp-serde = "1.3.1"
eframe = "0.34.3"
egui_plot = "0.35.0"
egui = "0.34.3"
